force-app/main/default/objects/Contact/fields/MPContactRole__c.field-meta.xml
<CustomField>
    <fullName>MPContactRole__c</fullName>
    <label>Función de Contacto</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Codeudor</fullName>
            </value>
            <value>
                <fullName>Contacto cobranza</fullName>
            </value>
            <value>
                <fullName>Contacto principal</fullName>
            </value>
            <value>
                <fullName>Encargado inmobiliario</fullName>
            </value>
            <value>
                <fullName>Representante legal 1</fullName>
            </value>
            <value>
                <fullName>Representante legal 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>