force-app/main/default/objects/Contact/fields/MPIdentificationType__c.field-meta.xml
<CustomField>
    <fullName>MPIdentificationType__c</fullName>
    <label>Tipo de Identificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPIdentificationType</valueSetName>
    </valueSet>
</CustomField>