force-app/main/default/objects/Contact/fields/MPPeruDistrict__c.field-meta.xml
<CustomField>
    <fullName>MPPeruDistrict__c</fullName>
    <label>Distrito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPPeruDistrict</valueSetName>
    </valueSet>
</CustomField>