force-app/main/default/objects/Contact/validationRules/VRCONT_001_SocMallContactEditingBlocked.validationRule-meta.xml
<ValidationRule>
    <fullName>VRCONT_001_SocMallContactEditingBlocked</fullName>
    <active>true</active>
    <description>Se boquea la edición de contactos relacionados a una cuenta de tipo Mall o Sociedad</description>
    <errorConditionFormula>AND( 
			 NOT(isnew()),
    		NOT(
            OR(
                $Profile.Name = &quot;System Administrator&quot;,
                $Profile.Name = &quot;Administrador del sistema&quot;
              )
        ),
				OR (
								Account.RecordType.DeveloperName = &apos;MPSociety&apos; ,
								Account.RecordType.DeveloperName = &apos;MPMall&apos; 
								) ,
        $UserRole.DeveloperName = &apos;Subgerente_Planificacion_Comercial&apos;
				)</errorConditionFormula>
    <errorMessage>No tiene los permisos necesarios para editar el contacto de una cuenta tipo Mall o Sociedad.</errorMessage>
</ValidationRule>